--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@willthevideoman/gatsby-plugin-ackee-tracker": "1.5.0",
     "babel-plugin-styled-components": "1.11.1",
     "dotenv": "8.2.0",
+    "embla-carousel": "^4.0.5",
     "gatsby": "2.24.67",
     "gatsby-image": "2.4.20",
     "gatsby-plugin-manifest": "2.4.33",
@@ -23,7 +24,25 @@
     "styled-components": "5.2.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-a11y": "^6.0.26",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-console": "^1.2.2",
+    "@storybook/addon-docs": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-knobs": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/addon-storyshots": "^6.0.26",
+    "@storybook/addon-viewport": "^6.0.26",
+    "@storybook/react": "^6.0.26",
+    "babel-jest": "^26.5.0",
+    "babel-loader": "^8.1.0",
+    "babel-preset-gatsby": "^0.5.12",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.5.0",
+    "prettier": "2.1.2",
+    "react-is": "^16.13.1",
+    "react-test-renderer": "^16.13.1"
   },
   "keywords": [
     "gatsby"
@@ -36,7 +55,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test:jest": "jest",
+    "storybook": "NODE_ENV=test start-storybook -p 6006 -s ./public",
+    "build-storybook": "NODE_ENV=test build-storybook -s ./public"
   },
   "repository": {
     "type": "git",
